fix: fix some bugs in translator and member selector
